--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -11,7 +11,6 @@
                 variant="text" />
         </ng-template>
         <ng-template #end>
-            <p-button icon="pi pi-eye" text severity="contrast" (onClick)="changeHidden()" />
             <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
             <p-button icon="pi pi-sign-out" text severity="danger" (onClick)="goCoachees()" />
         </ng-template>
@@ -142,12 +141,7 @@
                 </ul>
             </ng-template>
         </p-popover>
-        <div class="w-full" [hidden]="!hidden">
-            <label for="goal" class="block mb-1 font-medium">Objetivo <p-button icon="pi pi-info-circle" text
-                    severity="info" [size]="'small'" (click)="op.toggle($event)" /></label>
-            <input pInputText id="goal" class="w-full" value="Decidir siguiente paso">
-        </div>
-        <p-panel [hidden]="hidden">
+        <p-panel>
             <ng-template #header>
                 <span class="font-medium">Objetivo</span>
             </ng-template>
@@ -158,21 +152,7 @@
         </p-panel>
     </div>
     <div class="w-full flex flex-col">
-        <div class="w-full" [hidden]="!hidden">
-
-            <label for="details" class="block mb-1 font-medium">Desarrollo de la sesión <p-button
-                    icon="pi pi-info-circle" text severity="info" [size]="'small'" /></label>
-            <p-table [value]="detailOptions()" selectionMode="single" [(selection)]="selectedDetail" dataKey="id"
-                scrollHeight="flex" id="details" [size]="'small'" disabled>
-                <ng-template pTemplate="body" let-detail>
-                    <tr [pSelectableRow]="detail">
-                        <td [width]="'5%'">{{ detail.type }}</td>
-                        <td>{{ detail.text }}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        <p-panel [hidden]="hidden">
+        <p-panel>
             <ng-template #header>
                 <span class="font-medium">Desarrollo de la sesión</span>
             </ng-template>
@@ -189,22 +169,7 @@
         </p-panel>
     </div>
     <div class="w-full mb-auto">
-        <div class="w-full" [hidden]="!hidden">
-
-            <label for="tasks" class="block mb-1 font-medium">Planes de Acción <p-button icon="pi pi-info-circle" text
-                    severity="info" [size]="'small'" /></label>
-            <p-table [value]="taskOptions()" selectionMode="single" [(selection)]="selectedTask" dataKey="id"
-                scrollHeight="flex" id="tasks" [size]="'small'">
-                <ng-template pTemplate="body" let-task>
-                    <tr [pSelectableRow]="task">
-                        <td>{{ task.text }}</td>
-                        <td [width]="'15%'">{{ task.scheduled | date: 'dd/MM HH:mm'}}</td>
-                        <td [width]="'5%'">{{ task.score + "/10"}}</td>
-                    </tr>
-                </ng-template>
-            </p-table>
-        </div>
-        <p-panel [hidden]="hidden">
+        <p-panel>
             <ng-template #header>
                 <span class="font-medium">Planes de Acción</span>
             </ng-template>
@@ -219,23 +184,6 @@
                 <p-button icon="pi pi-info-circle" text severity="info" [size]="'small'" />
             </ng-template>
         </p-panel>
-    </div>
-    <div class="w-full" [hidden]="!hidden">
-        <label for="input" class="block mb-1 font-medium">Introducir datos <p-button icon="pi pi-info-circle" text
-                severity="info" [size]="'small'" /></label>
-        <div class="flex flex-row justify-between">
-            <p-selectbutton [options]="stateOptions" [ngModel]="value" optionLabel="label" optionValue="value"
-                aria-labelledby="basic" />
-            <div class="flex gap-1">
-                <p-button icon="pi pi-tags" [rounded]="true" [outlined]="true" severity="success" />
-                <p-button icon="pi pi-user" [rounded]="true" [outlined]="true" severity="warn" />
-                <p-button icon="pi pi-face-smile" [rounded]="true" [outlined]="true" severity="help" />
-            </div>
-        </div>
-        <div class="w-full mt-auto flex flex-row gap-2 items-center">
-            <textarea id="input" rows="2" pTextarea class="w-full" placeholder="Escribe aquí"></textarea>
-            <p-button icon="pi pi-send" [size]="'large'"></p-button>
-        </div>
     </div>
     <app-insert-data [is_grow]="this.session()?.is_grow ?? false" (newGoal)="setGoal($event)"
         (newNote)="addNote($event)" (newTask)="addTask($event)">
