feat: added notes CRUD to backend #87

--- a/frontend/src/app/session/insert-data/insert-data.html
+++ b/frontend/src/app/session/insert-data/insert-data.html
@@ -11,7 +11,7 @@
         </div>
         <!-- <div class="w-full mt-2 flex flex-row justify-between gap-2 items-center">
             <div class="flex gap-1">
-                <input pInputText id="goal" placeholder="Fecha Hora">
+                <input pInputText id="moment" placeholder="Fecha Hora">
                 <p-inputNumber id="commitment" [min]="1" [max]="10" suffix="/10" placeholder="Compromiso" class="w-full"
                     inputStyleClass="w-full" />
 
