--- a/frontend/src/app/new-session-dialog/new-session-dialog.html
+++ b/frontend/src/app/new-session-dialog/new-session-dialog.html
@@ -1,4 +1,5 @@
 @if(process()){
+<p-confirmdialog />
 <p-dialog header="Nueva Sesión" [visible]="visible()" [style]="{ width: '45rem' }" [modal]="true" [closable]="false">
     <p-panel header="Datos de Proceso" class="flex flex-col mb-3">
         <div class="py-1 flex flex-col">
