--- a/frontend/src/app/new-session-dialog/new-session-dialog.html
+++ b/frontend/src/app/new-session-dialog/new-session-dialog.html
@@ -38,8 +38,9 @@
         <div class="py-1 flex flex-col">
             <span class="font-medium">Planes de acción pendientes:</span>
             <ul class="list-inside list-disc">
-                <li>10/10 07/10 15:00 Reunión nuevo diseño</li>
-                <li>10/10 08/10 23:59 Decidir qué diseño nuevo se hace</li>
+                @for (task of previousSession()?.tasks; track task.id) {
+                <li>{{task.text}}</li>
+                }
             </ul>
         </div>
         <div class="py-1 flex flex-col">
