feat: protected routes and access points #96 #96

--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -8,6 +8,7 @@
         </ng-template>
         <ng-template #end>
             <p-button icon="pi pi-window-maximize" text severity="info" (onClick)="toggleFullScreen()" />
+            <p-button icon="pi pi-power-off" text severity="danger" (onClick)="closeSession()" />
         </ng-template>
     </p-toolbar>
     <p-confirmdialog />
