--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -2,6 +2,7 @@
 <app-coachee-profile [coachee]="this.coachee()" [(visible)]="this.visibleProfile"></app-coachee-profile>
 <app-previous-info-dialog [process]="this.process()" [(visible)]="this.visibleNotes"></app-previous-info-dialog>
 <app-emotions-dialog [(visible)]="this.visibleEmotions" (emotionClicked)="addEmotion($event)"></app-emotions-dialog>
+<app-lesson-dialog [(visible)]="this.visibleLesson" [imageSrc]="this.lessonImage()"></app-lesson-dialog>
 <p-drawer [(visible)]="visible" header="Info & Herramientas">
     <p-button class="w-full" icon="pi pi-face-smile" text label="Cuadro Emociones" severity="help"
         (onClick)="showDialogEmotions()" />
@@ -28,9 +29,9 @@
     <p-divider />
     <p-button class="w-full" icon="pi pi-graduation-cap" text label="Píldoras Formativas" severity="success" />
     <ul>
-        <li class="ml-2">Emociones Básicas</li>
-        <li class="ml-2">Camino Autoestima</li>
-        <li class="ml-2">REA</li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Emociones Básicas" (click)="showDialogLesson('emociones-basicas.png')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Camino Autoestima" (click)="showDialogLesson('camino-autoestima.png')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Círculo Influencia" (click)="showDialogLesson('circulo-influencia.jpg')"></p-button></li>
     </ul>
     <p-divider />
     <h4 class="text-primary-700 font-semibold">
