feat: added images simulating tools #12

--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -20,11 +20,12 @@
     <p-divider />
     <p-button class="w-full" icon="pi pi-wrench" text label="Herramientas" severity="secondary" />
     <ul>
-        <li class="ml-2">Rueda de la Vida</li>
-        <li class="ml-2">Valores</li>
-        <li class="ml-2">Semana Ideal</li>
-        <li class="ml-2">Test de Colores</li>
-        <li class="ml-2">Ficha Objetivo</li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Rueda de la Vida" (click)="showDialogLesson('rueda-vida.jpg')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Valores" (click)="showDialogLesson('valores.jpg')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Test de Colores" (click)="showDialogLesson('test-colores.jpg')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Balanza" (click)="showDialogLesson('balanza.jpg')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Semana Ideal" (click)="showDialogLesson('semana-vista.jpg')"></p-button></li>
+        <li class="ml-2"><p-button text styleClass="p-0.5" severity="secondary" label="Ficha Objetivo" (click)="showDialogLesson('ficha-objetivo.jpg')"></p-button></li>
     </ul>
     <p-divider />
     <p-button class="w-full" icon="pi pi-graduation-cap" text label="Píldoras Formativas" severity="success" />
