fix: lesson-dialog with default 'no-image'. Session drawer not closable

--- a/frontend/src/app/session/session-drawer/session-drawer.html
+++ b/frontend/src/app/session/session-drawer/session-drawer.html
@@ -1,4 +1,4 @@
-<p-drawer [visible]="visible()" header="Info & Herramientas">
+<p-drawer [visible]="visible()" header="Info & Herramientas" closable="false">
     <p-button class="w-full" icon="pi pi-face-smile" text label="Cuadro Emociones" severity="help"
         (onClick)="callShowDialogEmotions()" />
     <p-button class="w-full" icon="pi pi-id-card" text label="Perfil Coachee" (onClick)="callShowProfile()" />
