--- a/frontend/src/app/session/lesson-dialog/lesson-dialog.html
+++ b/frontend/src/app/session/lesson-dialog/lesson-dialog.html
@@ -1,7 +1,9 @@
 <p-dialog id="lesson-dialog" [visible]="visible()" closable="false" [modal]="true"
      [contentStyleClass]="'flex flex-col justify-center h-[90vh] w-[90vw]'">
-    <p-image class="flex-1 overflow-hidden self-center" imageClass="h-full object-contain" [src]="fullImagePath()"
-        alt="Lesson image" [hidden]="imageSrc() ===''" />
+    @if (imageSrc() !== '') {
+        <p-image class="flex-1 overflow-hidden self-center" imageClass="h-full object-contain" [src]="fullImagePath()"
+            alt="Lesson image" />
+    }
     <div class="flex justify-end gap-2 mt-4">
         <p-button label="Cerrar" severity="info" (click)="close()" />
     </div>
