fix: added title on toolbar and remove menu button. Moved toolbar styles to css

--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -1,7 +1,7 @@
 <div class="w-full h-full flex flex-col gap-2 bg-primary-50">
-    <p-toolbar [style]="{ 'padding': '0' }">
+    <p-toolbar>
         <ng-template #start>
-            <p-button icon="pi pi-bars" text severity="contrast" />
+            <span class="pl-3 text-primary font-medium text-l">CoachAssistant</span>
         </ng-template>
         <ng-template #center>
             <p-button icon="pi pi-users" text severity="help" label="Coachees" />
