--- a/frontend/src/app/session/session-toolbar/session-toolbar.html
+++ b/frontend/src/app/session/session-toolbar/session-toolbar.html
@@ -1,6 +1,6 @@
-<p-toolbar [style]="{ 'padding': '0' }">
+<p-toolbar>
     <ng-template #start>
-        <span class="pl-3 text-primary font-medium text-xl">Coachee Assistant</span>
+        <span class="pl-3 text-primary font-medium text-l">CoachAssistant</span>
     </ng-template>
     <ng-template #center>
         <p-button id="title" icon="pi pi-folder-open" text severity="warn"
