--- a/frontend/src/app/coachee/coachee.html
+++ b/frontend/src/app/coachee/coachee.html
@@ -1,7 +1,7 @@
 <div class="w-full h-full flex flex-col gap-2 bg-primary-50">
-    <p-toolbar [style]="{ 'padding': '0' }">
+    <p-toolbar>
         <ng-template #start>
-            <p-button icon="pi pi-bars" text severity="contrast" />
+            <span class="pl-3 text-primary font-medium text-l">CoachAssistant</span>
         </ng-template>
         <ng-template #center>
             <p-button icon="pi pi-user" text severity="help" label="Datos del Coachee" />
@@ -89,7 +89,7 @@
         </div>
 
         <div class="flex justify-center gap-2 my-4">
-            <p-button label="Guardar Coachee" type="submit" icon="pi pi-check" [disabled]="coacheeForm.invalid"/>
+            <p-button label="Guardar Coachee" type="submit" icon="pi pi-check" [disabled]="coacheeForm.invalid" />
         </div>
     </form>
     <div class="flex flex-col justify-between items-center gap-2">
