--- a/frontend/src/app/summary/summary.css
+++ b/frontend/src/app/summary/summary.css
@@ -1,3 +1,6 @@
+p-toolbar{
+    padding: 0
+}
 p-panel {
   --p-panel-header-padding: 0.5rem 0.5rem;
   --p-panel-toggleable-header-padding: 0rem 0.5rem;
