--- a/frontend/src/app/session/session.html
+++ b/frontend/src/app/session/session.html
@@ -3,7 +3,7 @@
 <app-previous-info-dialog [process]="this.process()" [(visible)]="this.visibleNotes"></app-previous-info-dialog>
 <app-emotions-dialog [(visible)]="this.visibleEmotions" (emotionClicked)="addEmotion($event)"></app-emotions-dialog>
 <app-lesson-dialog [(visible)]="this.visibleLesson" [imageSrc]="this.lessonImage()"></app-lesson-dialog>
-<app-session-drawer [(visible)]="visible" (leaveSession)="leaveSession($event)"
+<app-session-drawer [(visible)]="visible" [process]="this.process()" (leaveSession)="leaveSession($event)"
     (showDialogEmotions)="showDialogEmotions()" (showDialogLesson)="showDialogLesson($event)"
     (showProfile)="showProfile()"></app-session-drawer>
 <div class="w-full h-full flex flex-col gap-2 bg-primary-50">
