--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -14,9 +14,26 @@
     <p-confirmdialog />
     <app-new-session-dialog [(visible)]="visibleNewSession" [processId]="selectedProcessId()"></app-new-session-dialog>
     <div class="w-full flex flex-col">
+        <p-popover #cp>
+            <ng-template #content>
+                <h4 class="font-medium">¿Qué hace cada botón?</h4>
+                <p-divider />
+                <ul class="list-inside list-none gap-1">
+                    <li><span class="pi pi-window-maximize text-blue-500 pr-3"></span>Pantalla completa</li>
+                    <li><span class="pi pi-power-off text-red-500 pr-3"></span>Salir</li>
+                    <p-divider />
+                    <li><span class="pi pi-id-card text-blue-500 pr-3"></span>Ver perfil del coachee</li>
+                    <li><span class="pi pi-folder-open text-orange-500 pr-3"></span>Ver datos del proceso</li>
+                    <li><span class="pi pi-file-plus text-green-500 pr-3"></span>Crear nueva sesión</li>
+                    <li><span class="pi pi-folder-plus text-purple-500 pr-3"></span>Crear nuevo resumen</li>
+                    <li><span class="pi pi-trash text-red-500 pr-3"></span>Eliminar coachee</li>
+                </ul>
+            </ng-template>
+        </p-popover>
+
         <label for="coachees" class="block mb-1 font-medium">Coachees activos <p-button icon="pi pi-info-circle" text
-                severity="info" [size]="'small'" /></label>
-        <p-table [value]="coachees()" selectionMode="single" dataKey="id" scrollHeight="flex" id="coachee"
+                severity="info" [size]="'small'" (click)="cp.toggle($event)" /></label>
+        <p-table [value]="coachees()" [selectionMode]=null dataKey="id" scrollHeight="flex" id="coachee"
             [size]="'small'" disabled>
             <ng-template #header>
                 <tr>
