--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -33,8 +33,8 @@
 
         <label for="coachees" class="block mb-1 font-medium">Coachees activos <p-button icon="pi pi-info-circle" text
                 severity="info" [size]="'small'" (click)="cp.toggle($event)" /></label>
-        <p-table [value]="coachees()" [selectionMode]=null dataKey="id" scrollHeight="flex" id="coachee"
-            [size]="'small'" disabled>
+        <p-table [value]="coachees()" [selectionMode]="null" dataKey="id" scrollHeight="flex" id="coachee"
+            [size]="'small'">
             <ng-template #header>
                 <tr>
                     <th [width]="'60%'">Nombre</th>
