fix: added padding on coachees popover

--- a/frontend/src/app/coachees/coachees.html
+++ b/frontend/src/app/coachees/coachees.html
@@ -19,14 +19,14 @@
                 <h4 class="font-medium">¿Qué hace cada botón?</h4>
                 <p-divider />
                 <ul class="list-inside list-none gap-1">
-                    <li><span class="pi pi-window-maximize text-blue-500 pr-3"></span>Pantalla completa</li>
-                    <li><span class="pi pi-power-off text-red-500 pr-3"></span>Salir</li>
+                    <li class="p-0.5"><span class="pi pi-window-maximize text-blue-500 pr-3"></span>Pantalla completa</li>
+                    <li class="p-0.5"><span class="pi pi-power-off text-red-500 pr-3"></span>Salir</li>
                     <p-divider />
-                    <li><span class="pi pi-id-card text-blue-500 pr-3"></span>Ver perfil del coachee</li>
-                    <li><span class="pi pi-folder-open text-orange-500 pr-3"></span>Ver datos del proceso</li>
-                    <li><span class="pi pi-file-plus text-green-500 pr-3"></span>Crear nueva sesión</li>
-                    <li><span class="pi pi-folder-plus text-purple-500 pr-3"></span>Crear nuevo resumen</li>
-                    <li><span class="pi pi-trash text-red-500 pr-3"></span>Eliminar coachee</li>
+                    <li class="p-0.5"><span class="pi pi-id-card text-blue-500 pr-3"></span>Ver perfil del coachee</li>
+                    <li class="p-0.5"><span class="pi pi-folder-open text-orange-500 pr-3"></span>Ver datos del proceso</li>
+                    <li class="p-0.5"><span class="pi pi-file-plus text-green-500 pr-3"></span>Crear nueva sesión</li>
+                    <li class="p-0.5"><span class="pi pi-folder-plus text-purple-500 pr-3"></span>Crear nuevo resumen</li>
+                    <li class="p-0.5"><span class="pi pi-trash text-red-500 pr-3"></span>Eliminar coachee</li>
                 </ul>
             </ng-template>
         </p-popover>
