--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -2,3 +2,13 @@
 @import "tailwindcss";
 @plugin "tailwindcss-primeui";
 @import "primeicons/primeicons.css";
+
+p-toolbar{
+    padding: 0
+}
+p-panel {
+  --p-panel-header-padding: 0.5rem 0.5rem;
+  --p-panel-toggleable-header-padding: 0rem 0.5rem;
+  --p-panel-content-padding: 0rem 0.5rem 0.5rem 0.5rem;
+  --p-panel-footer-padding: 0rem;
+}
