--- a/frontend/src/app/summary/summary.html
+++ b/frontend/src/app/summary/summary.html
@@ -13,7 +13,7 @@
         </ng-template>
     </p-toolbar>
 
-    <p-dialog header="Perfil Coachee" [(visible)]="visibleProfile" [position]="'top'" [style]="{ width: '45rem' }">
+    <p-dialog header="Perfil Coachee" [(visible)]="visibleProfile" [position]="'top'" contentStyleClass="w-[90vw]">
         <div class="flex flex-col">
             <div class="py-1 grid grid-cols-3">
                 <span class="font-medium">Nombre Completo:</span>
