--- a/frontend/src/app/session/previous-info-dialog/previous-info-dialog.html
+++ b/frontend/src/app/session/previous-info-dialog/previous-info-dialog.html
@@ -1,6 +1,6 @@
 <p-confirmdialog />
 <p-dialog header="Notas Previas" [visible]="visible()" closable="false" position="top" draggable="false"
-    [style]="{ width: '45rem' }">
+    contentStyleClass="w-[90vw]">
     <div class="flex flex-col">
         <div class="py-1 flex flex-col">
             <span class="font-medium">Objetivo Proceso:</span>
